--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,10 @@
   font-family: "normalfont2";
 }
 
+:root {
+  --dark_purple: #313153;
+}
+
 body {
   margin: 0%;
 }
@@ -158,15 +162,21 @@ body {
   display: none;
 }
 .navigation {
-  display: none;
-  background: #242424;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  background: var(--dark_purple);
   position: absolute;
-  top: 0px;
+  top: 70px;
   width: 100%;
   z-index: 9998;
-  margin-left: -50px;
+  margin-left: -20px;
+  height: 100%;
 }
-.navigation__list {
+
+
+
+/* .navigation__list {
   text-align: center;
   list-style: none;
   padding: 0;
@@ -185,13 +195,54 @@ body {
   display: block;
   padding: 24px 0;
   transition: 0.5s;
-}
+} */
 @media (hover: hover) and (pointer: fine) {
   .navigation__link:hover {
     background: #333;
   }
 }
 
+.navigation_list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation p {
+  color: #ffffff;
+  font-family: "normalfont3";
+  margin: 0;
+  display: inline-block;
+  font-size: 30px;
+}
+
+.navigation_ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation_ul li {
+  padding-bottom: 5px;
+}
+
+.navigation_ul li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.neon-line {
+  width: 2.5px;
+  height: 77px;
+  /* transform: rotate(90deg); */
+  flex-shrink: 0;
+  stroke-width: 2.208px;
+  background-color: #fbf6a4;
+  filter: drop-shadow(0px 0px 4.4157209396362305px #f1df38);
+  /* width: 100px;
+  height: 100px; */
+  /* background-color: lightcoral; */
+}
 @media screen and (max-width: 768px) {
   .header {
     height: 70px;
@@ -204,9 +255,5 @@ body {
 
   .navi_element {
     font-size: 14px;
-  }
-
-  .navigation {
-    margin-left: -20px;
   }
 }
