--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,3 +210,10 @@ body {
     font-size: 14px;
   }
 }
+
+/* ファーストビューアニメーション */
+.first-view {
+  background-color: #000000;
+  width: 100%;
+  height: 100vh;
+}
