--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,7 @@ body {
   background-color: #313153;
   padding: 0 50px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: fixed;
 }
 
 .header_title {
