--- a/public/css/top.css
+++ b/public/css/top.css
@@ -18,3 +18,46 @@
     height: 320px;
   }
 }
+
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--dark_purple);
+}
+
+.about_bg_text {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../image/index/about-backimg-pc.png);
+  /* background-image: url(../image/index/about-backimg-sp.png); */
+  background-size: 100% 750px;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about-title p,
+.about-title h2 {
+  color: white;
+  text-shadow: 0px 0px 9px #f7ed12;
+  margin: 0;
+}
+
+.about-text p {
+  text-align: center;
+  color: white;
+  font-size: 25px;
+  line-height: 250%;
+}
