--- a/public/css/top.css
+++ b/public/css/top.css
@@ -19,6 +19,7 @@
   }
 }
 
+/*about部分  */
 .about {
   display: flex;
   justify-content: center;
@@ -27,37 +28,57 @@
   height: 100vh;
   background-color: var(--dark_purple);
 }
-
 .about_bg_text {
   width: 100%;
   height: 100vh;
   background-image: url(../image/index/about-backimg-pc.png);
-  /* background-image: url(../image/index/about-backimg-sp.png); */
-  background-size: 100% 750px;
+  background-size: 110% 750px;
+  background-position: center;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
 .about-title {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
 .about-title p,
 .about-title h2 {
   color: white;
   text-shadow: 0px 0px 9px #f7ed12;
   margin: 0;
 }
-
+.about-title p {
+  font-size: 30px;
+}
+.about-title h2 {
+  font-size: 65px;
+}
 .about-text p {
   text-align: center;
   color: white;
   font-size: 25px;
   line-height: 250%;
+}
+
+@media screen and (max-width: 768px) {
+  .about_bg_text {
+    height: 450px;
+    background-image: url(../image/index/about-backimg-sp.png);
+    background-size: 92% 450px;
+    background-position: center;
+  }
+  .about-title p {
+    font-size: 18px;
+  }
+  .about-title h2 {
+    font-size: 38px;
+  }
+  .about-text p {
+    font-size: 15px;
+  }
 }
