--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,16 +216,26 @@ body {
   padding: 60px 0;
   gap: 50px;
 }
-
 .footer p {
   color: white;
   font-size: 20px;
   margin: 0;
 }
-
 .footer p span {
   display: inline-block;
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 40px 0;
+  }
+  .footer p {
+    font-size: 14px;
+  }
+  .footer p span {
+    font-size: 16px;
+  }
 }
