--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,8 @@ body {
   background-color: #313153;
   padding: 0 50px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position:fixed;
+  top: 0;
 }
 
 .header_title {
@@ -137,7 +139,7 @@ body {
   width: 100%;
   z-index: 9998;
   margin-left: -20px;
-  height: 100%;
+  height: 100vh;
   display: none;
 }
 
