--- a/public/css/about.css
+++ b/public/css/about.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
     text-align: center;
 }
-
+a{
+    text-decoration: none;
+    color: #000000;
+}
 p {
     font-size: 17px;
 }
@@ -51,15 +54,19 @@ h4 {
 
 .top .second-nav{
     margin: 4% 0;
-    width: 73%;
+    width: 95%;
 
     display: flex;
     justify-content: space-between;
     align-items: stretch;
 }
 
-.top .second-nav-box{
+.top .second-nav a{
     width: 30%;
+}
+
+.top .second-nav-box{
+    width: 100%;
 
     background-color: #ffffff;
 
@@ -69,23 +76,16 @@ h4 {
 
     border: medium solid #000000;
 
-    box-shadow: 5px 5px 0;
-}
+    box-shadow: 5px 5px 0 #000000;
 
-.top .second-nav-box a{
-    padding: 0.5rem 0;
-    font-size: 1rem;
-    font-weight: 300;
-
-    text-decoration: none;
-    color: #000000;
+    padding: 0.5rem;
 }
 
 #theme{
     background-color: #313153;
     overflow: hidden;
 
-    padding: 5% 15%;
+    padding: 10% 15%;
 
     display: flex;
     flex-direction: column;
@@ -201,6 +201,18 @@ footer .contents{
 
 }
 
+@media screen and (max-width: 768px) {
+.top{
+    margin-top: 70px;
+}
+.top .second-nav{
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: stretch;
+    row-gap: 10px;
+}
+}
+
 
 
 @media screen and (max-width:480px){
@@ -219,10 +231,12 @@ h2{
     row-gap: 10px;
 }
 
-.top .second-nav-box{
+.top .second-nav a{
     width: 40%;
 }
-
+#theme{
+    padding: 10% 5%;
+}
 #theme img{
     width: 100%;
     height: auto;
