--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,9 @@ body {
   background-color: #313153;
   padding: 0 50px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position:fixed;
+  position: fixed;
   top: 0;
+  z-index: 999;
 }
 .header_title {
   display: flex;
@@ -240,3 +241,133 @@ body {
     font-size: 16px;
   }
 }
+
+/* ここからセクション選択関係 */
+.top {
+  width: 100%;
+  height: 400px;
+  padding-top: 80px;
+  background-image: url("../image/event/bg_neon.webp");
+  background-size: cover;
+  background-color: #313153;
+  border-bottom: thin solid #fefef5;
+  box-shadow: 0 0 5px #fdc25a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 40px;
+}
+.top-title {
+  position: relative;
+  width: 290px;
+  height: 110px;
+  background-color: var(--dark_purple);
+  border: 2px solid white;
+}
+.top-title-rect {
+  position: absolute;
+  width: 310px;
+  height: 90px;
+  background-color: var(--dark_purple);
+  border: 2px solid white;
+  top: 8px;
+  left: -11px;
+}
+.back-purple {
+  width: 300px;
+  height: 100px;
+  background-color: var(--dark_purple);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid white;
+  position: absolute;
+  left: -6px;
+  top: 3px;
+}
+.top-title h2 {
+  display: inline-block;
+  position: relative;
+  font-size: 40px;
+  color: #eb3e37;
+  background-color: var(--dark_purple);
+}
+.top-title h2::before {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  color: #fff2d8;
+  font-size: 40px;
+  content: "EVENT";
+  /* z-index: -1; */
+}
+.event-nav {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.back-black {
+  width: 20%;
+  position: relative;
+  /* width: 250px; */
+  height: 60px;
+  background-color: #000;
+}
+.event-nav-box {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  /* width: 250px; */
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border: 4.761px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.event-nav-box a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 768px) {
+  .back-black {
+    width: 125px;
+    height: 45px;
+  }
+  .event-nav-box {
+    top: -5px;
+    left: -5px;
+  }
+  .event-nav-box a {
+    font-size: 15px;
+  }
+  .top-title {
+    width: 175px;
+    height: 60px;
+  }
+  .top-title-rect {
+    width: 193px;
+    height: 41px;
+    top: 6px;
+    left: -11px;
+  }
+  .back-purple {
+    width: 183px;
+    height: 50px;
+    left: -6px;
+  }
+  .top-title h2 {
+    font-size: 30px;
+  }
+  .top-title h2::before {
+    font-size: 30px;
+  }
+}
+
