--- a/public/css/top.css
+++ b/public/css/top.css
@@ -2,17 +2,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   background-color: var(--dark_purple);
+  padding-top: 80px;
   height: 100vh;
 }
 
 .top-img {
-  width: 600px;
-  height: 600px;
-  /* margin-bottom: 40%; */
+  width: 40%;
+  aspect-ratio: 1/1;
+  margin-bottom: 1%;
 }
 
 @media screen and (max-width: 768px) {
+  .top-logo {
+    padding-top: 70px;
+  }
   .top-img {
     width: 320px;
     height: 320px;
@@ -25,14 +30,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: var(--dark_purple);
 }
 .about_bg_text {
-  width: 100%;
-  height: 100vh;
+  width: 110%;
+  /* height: 100vh; */
+  padding: 10% 0;
   background-image: url(../image/index/about-backimg-pc.png);
-  background-size: 110% 101%;
+  background-size: cover;
   background-position-x: center;
   background-repeat: no-repeat;
   display: flex;
@@ -53,23 +59,27 @@
   margin: 0;
 }
 .about-title p {
-  font-size: 30px;
+  font-size: 20px;
 }
 .about-title h2 {
-  font-size: 65px;
+  font-size: 30px;
 }
 .about-text p {
   text-align: center;
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 250%;
 }
 @media screen and (max-width: 768px) {
+  .about {
+    padding-bottom: 10%;
+  }
   .about_bg_text {
     height: 450px;
-    background-image: url(../image/index/about-backimg-sp.png);
-    background-size: 90% 450px;
+    /* background-image: url(../image/index/about-backimg-sp.png); */
+    background-size: cover;
     background-position: center;
+    width: 90%;
   }
   .about-title p {
     font-size: 18px;
