--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,12 +266,12 @@ body {
 }
 
 .top h2 {
+  font-size: 25px;
   margin-top: 5%;
-
+  margin-bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-
   color: #ffffff;
 }
 
