--- a/public/css/booth.css
+++ b/public/css/booth.css
@@ -1,27 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-}
-a{
-    text-decoration: none;
-    color: #ffffff;
-}
-
-p {
-    font-size: 17px;
-}
-h2 {
-    font-size: 25px;
-}
-h3 {
-    font-size: 20px;
-}
-h4 {
-    font-size: 20px;
-}
-
 .top{
     width: 100%;
     overflow: hidden;
@@ -39,7 +15,7 @@ h4 {
 
     box-shadow: 0 0 5px #fdc25a;
 
-    background-image: url("../image/event/bg_neon.webp");
+    background-image: url("../image/common/bg_neon.webp");
     background-size: cover;
 }
 
@@ -95,18 +71,23 @@ h4 {
 }
 
 .booth{
+    position: relative;
     background-color: #313153;
     color: #ffffff;
 
     overflow: hidden;
 
-    padding: 4% 0;
+    padding: 10%;
 }
 
 .booth .store-button{
     background-color: #e8403d;
+    position: absolute;
 
-    width: 20%;
+    top: 5%;
+    right: 5%;
+
+    width: 25%;
     border: medium solid #000000;
 
     box-shadow: 5px 5px 0 #000000;
@@ -119,14 +100,18 @@ h4 {
     font-weight: bolder;
 }
 .booth .contents h2{
-    margin-top: 2%;
+    margin-top: 10%;
 }
-.booth .contents h4{
+.booth .contents p{
+    margin-top: 20px;
+}
+.booth .contents span{
     display: inline-block;
     color: #fdc25a;
     padding: 0.5rem;
-    margin-top: 6%;
-    font-weight: 100;
+    margin-top: 0.5rem;
+    font-size: large;
+    font-weight: bold;
 }
 .booth .container{
     width: 100%;
@@ -137,28 +122,30 @@ h4 {
 }
 
 .booth .solo-container, .booth .disco-container, .booth .works-container{
-    width: 58%;
-    height: 20vw;
-    background-color: #fefef5;
+    width: 80%;
+    height: auto;
 
     margin-top: 5%;
 }
 
-footer{
-    background-color: #677156;
-
-    overflow: hidden;
-}
-footer p{
-    color: #ffffff;
+.booth .solo-container img, .booth .disco-container img, .booth .works-container img{
+    width: 100%;
 }
 
-footer .contents{
-    margin: 10% 0;
+.cm{
+    background-color: #313153;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-}
-
-
+    margin-top: 10%;
+  
+    overflow: visible;
+  }
+  iframe{
+    width: 100%;
+    aspect-ratio: 16/9;
+  }
 
 @media screen and (max-width:480px){
 p {
@@ -190,8 +177,14 @@ h2{
 }
 
 .booth .store-button{
-    width: 40%;
-    padding: 0.5rem 0;
+    position: relative;
+    width: 50%;
+    padding: 0.5rem;
+
+    top: 0;
+    right: 0;
+
+
 
     margin: 5% 0 5% 50%;
     transform: translate(-50%);
