--- a/public/css/cafe.css
+++ b/public/css/cafe.css
@@ -1,3 +1,7 @@
+main{
+  background-color: #313153;
+}
+
 .cafe-explain {
   width: 100%;
   background-color: var(--dark_purple);
@@ -5,12 +9,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 100px 0;
+  padding: 10% 0;
   flex-direction: column;
 }
 .title-cafe {
   width: 300px;
-  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,7 +58,6 @@
   flex-direction: column;
   gap: 60px;
   background-color: var(--dark_purple);
-  padding-bottom: 100px;
 }
 
 .cafe-content1 {
@@ -145,4 +147,19 @@
   .event-nav-box-cafe a {
     font-size: 20px;
   }
+}
+
+.cm{
+  background-color: #313153;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 10%;
+
+  overflow: visible;
+}
+iframe{
+  width: 100%;
+  aspect-ratio: 16/9;
 }
