--- a/public/css/goods.css
+++ b/public/css/goods.css
@@ -1,22 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-p {
-    font-size: 17px;
-}
-h2 {
-    font-size: 25px;
-}
-h3 {
-    font-size: 20px;
-}
-h4 {
-    font-size: 20px;
-}
 a{
     text-decoration: none;
     color: #000000;
@@ -38,7 +19,7 @@ a{
 
     box-shadow: 0 0 5px #fdc25a;
 
-    background-image: url("../image/event/bg_neon.webp");
+    background-image: url("../image/common/bg_neon.webp");
     background-size: cover;
 }
 
@@ -77,7 +58,7 @@ a{
 
     box-shadow: 5px 5px 0 #000000;
 
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
 }
 
 .second-nav a:last-child .second-nav-box{
@@ -85,7 +66,7 @@ a{
 }
 
 .goods{
-    padding: 5% 7%;
+    padding: 10% 7%;
 
     background-color: #313153;
 }
@@ -101,25 +82,24 @@ a{
 
     margin-top: 5%;
 
-    gap: 30px;
+    gap: 40px;
 }
 
 .goods .contents::after{
     content: "";
     display: block;
-    width: 30%;
+    width: 29%;
 }
 
 .area{
-    width: 30%;
+    width: 29%;
     /* ↓仮 */
-    height: 200px;
-
-    background-color: #888888;
+    height: auto;
 }
 
 .area p{
     text-align: left;
+    color: #ffffff;
 }
 
 .area p span{
@@ -127,9 +107,11 @@ a{
 }
 
 .goods-container{
-    height: 150px;
+    width: 100%;
+    aspect-ratio: 1;
 
-    background-color: #000000;
+    background-image: url("../image/goods/goods.png");
+    background-size: cover;
 }
 
 footer{
@@ -147,6 +129,9 @@ footer .contents{
 }
 
 @media screen and (max-width: 768px) {
+.goods .contents{
+    gap: 30px;
+}
 .area{
     width: 45%;
 }
