--- a/public/css/movie.css
+++ b/public/css/movie.css
@@ -1,22 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-p {
-    font-size: 17px;
-}
-h2 {
-    font-size: 25px;
-}
-h3 {
-    font-size: 20px;
-}
-h4 {
-    font-size: 20px;
-}
 a{
     text-decoration: none;
     color: #000000;
@@ -38,7 +19,7 @@ a{
 
     box-shadow: 0 0 5px #fdc25a;
 
-    background-image: url("../image/event/bg_neon.webp");
+    background-image: url("../image/common/bg_neon.webp");
     background-size: cover;
 }
 
@@ -92,7 +73,7 @@ a{
 
     box-shadow: 5px 5px 0 #000000;
 
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
 }
 
 .second-nav a:first-child .second-nav-box{
@@ -100,7 +81,7 @@ a{
 }
 
 .movie{
-    padding: 5% 7%;
+    padding: 10% 7%;
 
     background-color: #313153;
 }
@@ -121,14 +102,20 @@ a{
 
 .area{
     width: 30%;
-    /* ↓仮 */
-    height: 100px;
+    margin-top: 3%;
+}
 
-    background-color: #888888;
+.area p{
+    color: #ffffff;
 }
 
 .movie-container{
-    height: 80px;
+    height: auto;
+}
+
+iframe{
+    width: 100%;
+    aspect-ratio: 16/9;
 }
 
 footer{
