--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,27 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-}
-a{
-    text-decoration: none;
-    color: #ffffff;
-}
-
-p {
-    font-size: 17px;
-}
-h2 {
-    font-size: 25px;
-}
-h3 {
-    font-size: 20px;
-}
-h4 {
-    font-size: 20px;
-}
-
 .top{
     width: 100%;
     overflow: hidden;
@@ -39,7 +15,7 @@ h4 {
 
     box-shadow: 0 0 5px #fdc25a;
 
-    background-image: url("../image/event/bg_neon.webp");
+    background-image: url("../image/common/bg_neon.webp");
     background-size: cover;
 }
 
@@ -100,7 +76,7 @@ h4 {
 
     overflow: hidden;
 
-    padding: 4% 10% 10% 10%;
+    padding: 10%;
 }
 
 .booth .stores h2{
@@ -246,27 +222,6 @@ h4 {
     line-height: 1.5;
     font-size: small;
 }
-
-
-
-
-
-
-
-footer{
-    background-color: #677156;
-
-    overflow: hidden;
-}
-footer p{
-    color: #ffffff;
-}
-
-footer .contents{
-    margin: 10% 0;
-
-}
-
 
 @media screen and (max-width: 1100px){
 .stores .contents .shadow{
