--- a/public/css/ws.css
+++ b/public/css/ws.css
@@ -1,27 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
-}
-a{
-    text-decoration: none;
-    color: #ffffff;
-}
-
-p {
-    font-size: 17px;
-}
-h2 {
-    font-size: 25px;
-}
-h3 {
-    font-size: 20px;
-}
-h4 {
-    font-size: 20px;
-}
-
 .top{
     width: 100%;
     overflow: hidden;
@@ -39,7 +15,7 @@ h4 {
 
     box-shadow: 0 0 5px #fdc25a;
 
-    background-image: url("../image/event/bg_neon.webp");
+    background-image: url("../image/common/bg_neon.webp");
     background-size: cover;
 }
 
@@ -100,8 +76,7 @@ h4 {
 
     overflow: hidden;
 
-    padding: 4% 7% 10% 7%;
-
+    padding: 10% 7%;
 
 }
 
@@ -119,20 +94,6 @@ h4 {
     background-color: #fefef5;
 
     margin-top: 10%;
-}
-
-footer{
-    background-color: #677156;
-
-    overflow: hidden;
-}
-footer p{
-    color: #ffffff;
-}
-
-footer .contents{
-    margin: 10% 0;
-
 }
 
 @media screen and (max-width: 768px) {
@@ -181,3 +142,19 @@ h2{
     margin-top: 10%;
 }
 }
+
+
+.cm{
+    background-color: #313153;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin-top: 10%;
+  
+    overflow: visible;
+  }
+  iframe{
+    width: 100%;
+    aspect-ratio: 16/9;
+  }
