--- a/public/css/common.css
+++ b/public/css/common.css
@@ -250,6 +250,9 @@ h4 {
   font-size: 20px;
   margin: 0;
 }
+.footer a{
+  text-decoration: underline;
+}
 .footer p span {
   display: inline-block;
   font-size: 30px;
