--- a/public/css/ws.css
+++ b/public/css/ws.css
@@ -96,6 +96,72 @@
     margin-top: 10%;
 }
 
+.ws-1, .ws-2, .ws-3{
+    margin-top: 10%;
+}
+
+.ws-1 .head-container{
+    background-color: #eb3e37;
+    padding: 3%;
+}
+.ws-2 .head-container{
+    background-color: #ffc34f;
+    padding: 3%;
+}
+.ws-3 .head-container{
+    background-color: #677156;
+    padding: 3%;
+}
+
+.ws-1 .img-container{
+    background-image: url("../image/event/ws/ws-1-bg.webp");
+    background-size: cover;
+    background-position: center;
+}
+.ws-2 .img-container{
+    background-image: url("../image/event/ws/ws-2-bg.webp");
+    background-size: cover;
+    background-position: center;
+}
+.ws-3 .img-container{
+    background-image: url("../image/event/ws/ws-3-bg.webp");
+    background-size: cover;
+    background-position: center;
+}
+
+.img-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0 5%;
+}
+
+.discription p{
+    margin-bottom: 5%;
+}
+
+.img-container .details{
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.img-container div{
+    display: flex;
+
+    column-gap: 10px;
+
+    margin-top: 10px;
+}
+
+.img-container .icon{
+    height: 2rem;
+}
+
 @media screen and (max-width: 768px) {
 .top{
     margin-top: 70px;
